    [#] Changed debug messages in Observer's destructor to trace messages.
    [#] QtilitiesProperty is now properly documented.
    [#] Moved registration of Logger::MessageType and Logger::MessageContext from ITask to Logger's constructor.
    [#] FileUtils::makeLocalCopyOfResource() will also create the local_path directory using QDir::mkpath() if it does not exist.

    [*] Fixed bug in Observer::handle_deletedSubject() where application can sometimes
        crash with "Detected QWeakPointer creation in a QObject being deleted".
    [*] Fixed possible crash in TreeIterator::last() when the TreeIterator was constructed with a null node.
    [*] Fixed potential crash in ~QtilitiesProcess() when it was run in a different thread. Now using deleteLater()
        on backend process.
    [*] Removed buffering done in QtilitiesProcess. See issue #99 for details. This led to the removal of
        QtilitiesProcess::setLineBreakStrings(), QtilitiesProcess::lineBreakString(), QtilitiesProcess::newStandardOutputMessage()
        and QtilitiesProcess::newStandardErrorMessage().
    [*] Fixed Task::completeTask() not always emitting with the correct result. For example, it would
        be emitted with the result set to TaskResultFromBusyStateFailOnError instead of TaskFailed.

    ============================
    QtilitiesCoreGui:
    ============================
    [+] Added new generic property related classes: GenericPropertyBrowser, GenericPropertyPathEditor,
        GenericPropertyPathEditorListWrapper, FileEditorFactory and PathPropertyManager.
    [+] Added TaskSummaryWidget::getSingleTaskWidgetForTask().
    [+] WidgetLoggerFrontends now has the option to specify where and if toolbars with actions related to the
        displayed log should be shown.
    [+] Added TaskLogNoInitialization to the TaskLogInitialization enumeration in TaskManagerGui.
        This allows tasks to be used more efficiently in console applications.